# compression-rspack-plugin

./: .gitignore  .swcrc  Cargo.toml  LICENSE  README.md  biome.json  index.cjs  index.d.cts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
lib/: helpers.ts  index.ts  options.json  types.ts
lib/compressors/: native.ts  zlib.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
scripts/: release.sh
src/: lib.rs
test/: CompressionPlugin.test.mjs  CompressionPlugin.test.ts  algorithm.test.mjs  algorithm.test.ts  compressionOptions.test.mjs  compressionOptions.test.ts  deflate-algorithms.test.mjs  deflate-algorithms.test.ts  deleteOriginalAssets.test.mjs  deleteOriginalAssets.test.ts  edge-cases.test.mjs  edge-cases.test.ts  exclude-option.test.mjs  exclude-option.test.ts  filename-option.test.mjs  filename-option.test.ts  include-option.test.mjs  include-option.test.ts  minRatio-option.test.mjs  minRatio-option.test.ts  string-patterns.test.mjs  string-patterns.test.ts  test-option.test.mjs  test-option.test.ts  threshold-option.test.mjs  threshold-option.test.ts  validate-options.test.mjs  validate-options.test.ts
test/__snapshots__/: CompressionPlugin.test.mjs.snap  CompressionPlugin.test.ts.snap  algorithm.test.mjs.snap  algorithm.test.ts.snap  compressionOptions.test.mjs.snap  (+18 more)
(+18 files in other folders)
